--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,28 +12,32 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body><ul id="lava-menu">
-
-  <li><a href="https://github.com/kyoir" target="_blank">Git Hub</a></li>
-  <li><a href="https://www.facebook.com/kyoir" target="_blank">Facebook</a></li>
-  <li><a href="http://twitter.com/iverlandth" target="_blank">Twitter</a></li>
-  <li><a href="#">Contactos</a></li>
-  <div class="cont-l">
-    <div id="lavalamp"></div>
-  </div>
-</ul>
-<h1><%= link_to "Iverlandth", root_path  %></h1>
-
-<h3> Dósis de Ruby on Rails, tecnología y cosas aleatorias</h3>
+<body>
 
 
 <%= yield %>
 
 </body>
-<div id="footerp">
-  <p>
-    Designed By <a href='http://twitter.com/iverlandth' target="_blank">@iverlandth</a>.
 
-  &#169; 2012 </p>
+<div id="footerp">
+  <ul id="lava-menu">
+    <li><a href="https://github.com/kyoir" target="_blank">Git Hub</a></li>
+    <li id="fb"><a href="https://www.facebook.com/kyoir" target="_blank">Facebook</a></li>
+    <li id="tw"><a href="http://twitter.com/iverlandth" target="_blank">Twitter</a></li>
+    <li><%=  mail_to "me@domain.com", "Contact", :encode => "hex" %></li>
+    <li><%=  link_to "Blog" %></li>
+    <div class="cont-l">
+      <div id="lavalamp"></div>
+    </div>
+  </ul>
+  <h1><%= link_to "Iverlandth (イヴェール)", root_path  %></h1>
+  <h4> Dósis de Ruby on Rails, tecnología y demás </h4>
+
+  <hr>
+  <p>
+    &#169; 2012-2013 - Designed By <a href='http://twitter.com/iverlandth' target="_blank">@iverlandth</a>.
+
+  </p>
+
 </div>
 </html>
