--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,42 +1,35 @@
 <div id="master-css">
 
 
-  <div id="extra-menu">
-    <div>Ultimos Post</div>
-    <a class="twitter-timeline" href="https://twitter.com/iverlandth" data-widget-id="260443202719449088">Tweets por @iverlandth</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
-  </div>
-
-
-
-
   <ul id="control">
-    <li class="a"><div>En construcción</div>
+    <li class="a"><div>RoR</div>
 
       <%=  image_tag "Ruby_Programming_Icons_by_3nc.jpg", :size=>"560x480", :border=>"0" %>
 
     </li>
 
-    <li class="b"><div>En construcción</div>
-      <%=  image_tag "bf_frontpage.png", :size=>"560x480", :border=>"0" %>
+    <li class="b"><div>Perspectiva</div>
+      <%=  image_tag "jobs-banner-img.jpg", :size=>"560x480", :border=>"0" %>
     </li>
 
-    <li class="c">       <div>En construcción</div>
-      <%=  image_tag "heroku-Logo-1.jpg.scaled1000.jpg", :size=>"560x480", :border=>"0" %>
+    <li class="c">       <div>Lenguajes de programación</div>
+      <%=  image_tag "img_kv.gif", :size=>"560x480", :border=>"0" %>
     </li>
 
-    <li class="d"><div>En construcción</div>
-      <%=  image_tag "Python-Programming-Language.png", :size=>"560x480", :border=>"0" %>
+    <li class="d"><div>Feedback</div>
+      <%=  image_tag "img_kv (1).gif", :size=>"560x480", :border=>"0" %>
     </li>
 
-    <li class="e"><div>En construcción</div>
-      <%=  image_tag "descarga.jpg", :size=>"560x480", :border=>"0" %>
+    <li class="e"><div>Meet up</div>
+      <%=  image_tag "img_kv (2).gif", :size=>"560x480", :border=>"0" %>
     </li>
 
-    <li class="f"><div>En construcción</div>
-      <%=  image_tag "kanji_ai.gif", :size=>"560x480", :border=>"0" %>
+    <li class="f"><div>Game</div>
+      <%=  image_tag "majo-banner.png", :size=>"560x480", :border=>"0" %>
     </li>
     <div id="tick-lamp"></div>
   </ul>
 </div>
+<br>
+  <center>
+<%= image_tag "top3rd_04_11.jpg" %></center><br><br><br><br><br><br><br><br>
