--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,7 +2,7 @@
 
 
   <ul id="control">
-    <li class="a"><div>RoR</div>
+    <li class="a"><div>RoR<%= link_to "Guias", :controller=> :main , :action=> :sieapp %></div>
 
       <%=  image_tag "Ruby_Programming_Icons_by_3nc.jpg", :size=>"560x480", :border=>"0" %>
 
