--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 
 <div id="footerp">
   <ul id="lava-menu">
-    <li><a href="https://github.com/kyoir" target="_blank">Git Hub</a></li>
+    <li><a href="https://github.com/iverlandth" target="_blank">Git Hub</a></li>
     <li id="fb"><a href="https://www.facebook.com/kyoir" target="_blank">Facebook</a></li>
     <li id="tw"><a href="http://twitter.com/iverlandth" target="_blank">Twitter</a></li>
     <li><%=  mail_to "me@domain.com", "Contact", :encode => "hex" %></li>
