--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -12,7 +12,7 @@
       <%=  image_tag "jobs-banner-img.jpg", :size=>"560x480", :border=>"0" %>
     </li>
 
-    <li class="c">       <div>Lenguajes de programación</div>
+    <li class="c">       <div>Lenguajes de programación <a href="http://www.cristalab.com/tutoriales/introduccion-a-codeigniter-c109252l/" target="_blank">php(codeigniter)</a></div>
       <%=  image_tag "img_kv.gif", :size=>"560x480", :border=>"0" %>
     </li>
 
