--- a/app/views/main/sieapp.html.erb
+++ b/app/views/main/sieapp.html.erb
@@ -47,10 +47,9 @@
 <p>Teclea <code>CTRL-C</code> en la terminal para detener el servidor.</p>
 
 
-<h2 id='step_2_create_idea_scaffold'>Step 2: Create Idea scaffold</h2>
+<h2 id='step_2_create_idea_scaffold'>Paso 2: Crear  Idea scaffold</h2>
 
-<p>We&#8217;re going to use Rails&#8217; scaffold functionality to generate a starting point that allows us to list,
-  add, remove, edit, and view things; in our case ideas.</p>
+<p>Vamos a utilizar la funcionalidad de Rails scaffold para generar un punto de partida que nos permite listar, añadir, eliminar, editar y ver las cosas, en las ideas de nuestros casos.</p>
 
 
 <div class='highlight'><pre><code class='sh'>rails generate scaffold idea name:string description:text picture:string
@@ -58,77 +57,64 @@
   rails server
 </code></pre>
 </div>
-<p>Open <a href='http://localhost:3000/ideas'>http://localhost:3000/ideas</a> in your browser.</p>
+<p>Abra <a href='http://localhost:3000/ideas'>http://localhost:3000/ideas</a> en su navegador.</p>
 
-<p>Hit <code>CTRL-C</code> to quit the server again when you&#8217;ve clicked around a little.</p>
+<p>Teclea<code>CTRL-C</code> para detener  del servidor.</p>
 
-<h2 id='step_3_design'>Step 3: Design</h2>
+<h2 id='step_3_design'>Paso 3: Diseño</h2>
 
 
 
-<p>The app doesn&#8217;t look very nice yet. Let&#8217;s do something about that. We&#8217;ll use the Twitter Bootstrap
-  project to give us nicer styling really easily.</p>
+<p>La aplicación no se ve muy bien todavía. Vamos a hacer algo al respecto. Usaremos el proyecto Bootstrap Twitter para darnos mejor estilo con mucha facilidad.</p>
 
-<p>Open <code>app/views/layouts/application.html.erb</code> in your text editor and above the line</p>
+<p>Abra <code>app/views/layouts/application.html.erb</code>  en su editor de texto.</p>
 
-<div class='highlight'><pre><code class='erb'><span class='cp'>&lt;%=</span> <span class='n'>stylesheet_link_tag</span>
-  <span class='s2'>&quot;application&quot;</span> <span class='cp'>%&gt;</span><span class='x'/>
+<div class='highlight'><pre><code class='erb'><span class='cp'>&lt;%=</span> <span class='n'>stylesheet_link_tag</span>  <span class='s2'>&quot;application&quot;</span> <span class='cp'>%&gt;</span><span class='x'/>
 </code></pre>
 </div>
-<p>add</p>
+<p>añadir</p>
 
 <div class='highlight'><pre><code class='erb'><span class='x'>&lt;link rel=&quot;stylesheet&quot; href=&quot;http://iverherlandth.herokuapp.com/assets/bootstrap.css&quot;&gt;</span>
 </code></pre>
 </div>
-<p>and replace</p>
+<p>y reemplazar</p>
 
-<div class='highlight'><pre><code class='erb'><span class='cp'>&lt;%=</span> <span class='k'>yield</span>
-  <span class='cp'>%&gt;</span><span class='x'/>
+<div class='highlight'><pre><code class='erb'><span class='cp'>&lt;%=</span> <span class='k'>yield</span>  <span class='cp'>%&gt;</span><span class='x'/>
 </code></pre>
 </div>
-<p>with</p>
+<p>con</p>
 
-<div class='highlight'><pre><code class='erb'><span class='x'>&lt;div class=&quot;container&quot;&gt;</span>
-  <span class='x'>  </span><span class='cp'>&lt;%=</span> <span class='k'>yield</span>
-  <span class='cp'>%&gt;</span><span class='x'/>
-  <span class='x'>&lt;/div&gt;</span>
+<div class='highlight'><pre><code class='erb'><span class='x'>&lt;div class=&quot;container&quot;&gt;</span>  <span class='x'>
+</span>   <span class='cp'>&lt;%=</span> <span class='k'>yield</span>  <span class='cp'>%&gt;</span><span class='x'/>
+<span class='x'>&lt;/div&gt;</span>
 </code></pre>
 </div>
-<p>Let&#8217;s also add a navigation bar and footer to the layout. In the same file, under <code>&lt;body&gt;</code> add
+<p>También vamos a añadir una barra de navegación y pie de página para el diseño. En el mismo archivo, debajo <code>&lt;body&gt;</code> añadir
 </p>
 
-<div class='highlight'><pre><code class='html'><span class='nt'>&lt;div</span>
-  <span class='na'>class=</span><span class='s'>&quot;navbar navbar-fixed-top&quot;</span><span class='nt'>&gt;</span>
-  <span class='nt'>&lt;div</span>
-  <span class='na'>class=</span><span class='s'>&quot;navbar-inner&quot;</span><span class='nt'>&gt;</span>
-  <span class='nt'>&lt;div</span>
-  <span class='na'>class=</span><span class='s'>&quot;container&quot;</span><span class='nt'>&gt;</span>
-  <span class='nt'>&lt;a</span> <span class='na'>class=</span><span class='s'>&quot;brand&quot;</span>
-  <span class='na'>href=</span><span class='s'>&quot;/&quot;</span><span class='nt'>&gt;</span>The Idea
-  app<span class='nt'>&lt;/a&gt;</span>
-  <span class='nt'>&lt;ul</span>
-  <span class='na'>class=</span><span class='s'>&quot;nav&quot;</span><span class='nt'>&gt;</span>
-  <span class='nt'>&lt;li</span>
-  <span class='na'>class=</span><span class='s'>&quot;active&quot;</span><span class='nt'>&gt;&lt;a</span>
-  <span class='na'>href=</span><span class='s'>&quot;/ideas&quot;</span><span class='nt'>&gt;</span>Ideas<span class='nt'>&lt;/a&gt;&lt;/li&gt;</span>
-  <span class='nt'>&lt;/ul&gt;</span>
+<div class='highlight'><pre><code class='html'><span class='nt'>&lt;div</span> <span class='na'>class=</span><span class='s'>&quot;navbar navbar-fixed-top&quot;</span><span class='nt'>&gt;</span>
+  <span class='nt'>&lt;div</span> <span class='na'>class=</span><span class='s'>&quot;navbar-inner&quot;</span><span class='nt'>&gt;</span>
+    <span class='nt'>&lt;div</span> <span class='na'>class=</span><span class='s'>&quot;container&quot;</span><span class='nt'>&gt;</span>
+        <span class='nt'>&lt;a</span> <span class='na'>class=</span><span class='s'>&quot;brand&quot;</span> <span class='na'>href=</span><span class='s'>&quot;/&quot;</span><span class='nt'>&gt;</span>The Idea app<span class='nt'>&lt;/a&gt;</span>
+        <span class='nt'>&lt;ul</span> <span class='na'>class=</span><span class='s'>&quot;nav&quot;</span><span class='nt'>&gt;</span>
+        <span class='nt'>&lt;li</span> <span class='na'>class=</span><span class='s'>&quot;active&quot;</span><span class='nt'>&gt;&lt;a</span> <span class='na'>href=</span><span class='s'>&quot;/ideas&quot;</span><span class='nt'>&gt;</span>Ideas<span class='nt'>&lt;/a&gt;&lt;/li&gt;</span>
+        <span class='nt'>&lt;/ul&gt;</span>
+    <span class='nt'>&lt;/div&gt;</span>
   <span class='nt'>&lt;/div&gt;</span>
-  <span class='nt'>&lt;/div&gt;</span>
-  <span class='nt'>&lt;/div&gt;</span>
+<span class='nt'>&lt;/div&gt;</span>
 </code></pre>
 </div>
-<p>and before <code>&lt;/body&gt;</code> add</p>
+<p>y antes de <code>&lt;/body&gt;</code> añadir</p>
 
 <div class='highlight'><pre><code class='html'><span class='nt'>&lt;footer&gt;</span>
-  <span class='nt'>&lt;div</span>
-  <span class='na'>class=</span><span class='s'>&quot;container&quot;</span><span class='nt'>&gt;</span>
+  <span class='nt'>&lt;div</span>   <span class='na'>class=</span><span class='s'>&quot;container&quot;</span><span class='nt'>&gt;</span>
   Sie Srl 2013
   <span class='nt'>&lt;/div&gt;</span>
-  <span class='nt'>&lt;/footer&gt;</span>
+<span class='nt'>&lt;/footer&gt;</span>
 </code></pre>
 </div>
-<p>Now let&#8217;s also change the styling of the ideas table. Open <code>app/assets/stylesheets/application.css</code>
-  and at the bottom add</p>
+<p>Ahora vamos a cambiar también el estilo de la mesa ideas. Abrir <code>app/assets/stylesheets/application.css</code>
+  y en la parte inferior añadir</p>
 
 <div class='highlight'><pre><code class='css'><span class='nt'>body</span> <span class='p'>{</span>
   <span class='k'>padding-top</span><span class='o'>:</span> <span class='m'>100px</span><span class='p'>;</span>
@@ -141,153 +127,128 @@
   <span class='k'>none</span> <span class='cp'>!important</span><span class='p'>;</span> <span class='p'>}</span>
   <span class='nt'>th</span> <span class='p'>{</span> <span class='k'>border-bottom</span><span class='o'>:</span>
   <span class='m'>1px</span> <span class='k'>solid</span> <span class='m'>#DDD</span> <span class='cp'>!important</span><span class='p'>;</span>
-  <span class='p'>}</span>
+<span class='p'>}</span>
 </code></pre>
 </div>
 
-<h2 id='step_4_adding_picture_uploads'>Step 4: Adding picture uploads</h2>
+<h2 id='step_4_adding_picture_uploads'>Paso 4: Agregar archivos de imagen</h2>
 
-<p>We need to install a piece of software to let us upload files in Rails.</p>
+<p>Tenemos que instalar un software para hacernos subir archivos en Rails.</p>
 
-<p>Open <code>Gemfile</code> in the project directory and under the line</p>
+<p>Abra  <code>Gemfile</code>  en el directorio del proyecto y bajo la línea</p>
 
 <div class='highlight'><pre><code class='ruby'><span class='n'>gem</span> <span class='s1'>&#39;sqlite3&#39;</span>
 </code></pre>
 </div>
-<p>add</p>
+<p>añadir</p>
 
 <div class='highlight'><pre><code class='ruby'><span class='n'>gem</span> <span class='s1'>&#39;carrierwave&#39;</span>
 </code></pre>
 </div>
 
 
-<p>In the terminal run:</p>
+<p>En la  terminal ejecute el comando:</p>
 
 <div class='highlight'><pre><code class='sh'>bundle
 </code></pre>
 </div>
-<p>At this point you need to <strong>restart the Rails server process</strong> in the terminal. This is needed for the
-  app to load the added library.</p>
+<p>En este punto es necesario  <strong>reiniciar el proceso del servidor de Rails</strong> en el terminal. Esto es necesario para la aplicación para cargar la biblioteca añadido.</p>
 
-<p>Now we can generate the code for handling uploads. In the terminal run:</p>
+<p>Ahora podemos generar el código para el manejo de cargas. En la terminal:</p>
 
 <div class='highlight'><pre><code class='sh'>rails generate uploader Picture
 </code></pre>
 </div>
-<p>Open <code>app/models/idea.rb</code> and under the line</p>
+<p>Abrir <code>app/models/idea.rb</code> y bajo la línea</p>
 
-<div class='highlight'><pre><code class='ruby'><span class='k'>class</span> <span class='nc'>Idea</span>
-  <span class='o'>&lt;</span> <span class='no'>ActiveRecord</span><span class='o'>::</span><span class='no'>Base</span>
+<div class='highlight'><pre><code class='ruby'><span class='k'>class</span> <span class='nc'>Idea</span>    <span class='o'>&lt;</span> <span class='no'>ActiveRecord</span><span class='o'>::</span><span class='no'>Base</span>
 </code></pre>
 </div>
-<p>add</p>
+<p>añadir</p>
 
-<div class='highlight'><pre><code class='ruby'><span class='n'>mount_uploader</span>
-  <span class='ss'>:picture</span><span class='p'>,</span> <span class='no'>PictureUploader</span>
+<div class='highlight'><pre><code class='ruby'><span class='n'>mount_uploader</span>   <span class='ss'>:picture</span><span class='p'>,</span> <span class='no'>PictureUploader</span>
 </code></pre>
 </div>
-<p>Open <code>app/views/ideas/_form.html.erb</code> and change</p>
+<p>abrir <code>app/views/ideas/_form.html.erb</code> y cambiar</p>
 
-<div class='highlight'><pre><code class='erb'><span class='cp'>&lt;%=</span>
-  <span class='n'>f</span><span class='o'>.</span><span class='n'>text_field</span> <span class='ss'>:picture</span>
-  <span class='cp'>%&gt;</span><span class='x'/>
+<div class='highlight'><pre><code class='erb'><span class='cp'>&lt;%=</span>   <span class='n'>f</span><span class='o'>.</span><span class='n'>text_field</span> <span class='ss'>:picture</span>    <span class='cp'>%&gt;</span><span class='x'/>
 </code></pre>
 </div>
-<p>to</p>
+<p>a</p>
 
-<div class='highlight'><pre><code class='erb'><span class='cp'>&lt;%=</span>
-  <span class='n'>f</span><span class='o'>.</span><span class='n'>file_field</span> <span class='ss'>:picture</span>
-  <span class='cp'>%&gt;</span><span class='x'/>
+<div class='highlight'><pre><code class='erb'><span class='cp'>&lt;%=</span> <span class='n'>f</span><span class='o'>.</span><span class='n'>file_field</span> <span class='ss'>:picture</span> <span class='cp'>%&gt;</span><span class='x'/>
 </code></pre>
 </div>
-<p>and</p>
+<p>y</p>
 
 <p>
 
-<div class='highlight'><pre><code class='erb'><span class='cp'>&lt;%=</span>
-  <span class='n'>form_for</span><span class='p'>(</span><span class='vi'>@idea</span><span class='p'>)</span>
-  <span class='k'>do</span> <span class='o'>|</span><span class='n'>f</span><span class='o'>|</span>
-  <span class='cp'>%&gt;</span><span class='x'/>
+<div class='highlight'><pre><code class='erb'><span class='cp'>&lt;%=</span> <span class='n'>form_for</span><span class='p'>(</span><span class='vi'>@idea</span><span class='p'>)</span><span class='k'>do</span> <span class='o'>|</span><span class='n'>f</span><span class='o'>|</span> <span class='cp'>%&gt;</span><span class='x'/>
 </code></pre>
 </div>
 </p>
 
-<p>to</p>
+<p>a</p>
 
 <p>
 
-<div class='highlight'><pre><code class='erb'><span class='cp'>&lt;%=</span>
-  <span class='n'>form_for</span><span class='p'>(</span><span class='vi'>@idea</span><span class='p'>,</span>
-  <span class='ss'>:html</span> <span class='o'>=&gt;</span> <span class='p'>{</span> <span class='ss'>:multipart</span>
-  <span class='o'>=&gt;</span> <span class='kp'>true</span> <span class='p'>})</span> <span class='k'>do</span>
-  <span class='o'>|</span><span class='n'>f</span><span class='o'>|</span>
-  <span class='cp'>%&gt;</span><span class='x'/>
+<div class='highlight'><pre><code class='erb'><span class='cp'>&lt;%=</span> <span class='n'>form_for</span><span class='p'>(</span><span class='vi'>@idea</span><span class='p'>,</span><span class='ss'>:html</span> <span class='o'>=&gt;</span> <span class='p'>{</span> <span class='ss'>:multipart</span><span class='o'>=&gt;</span> <span class='kp'>true</span> <span class='p'>})</span> <span class='k'>do</span><span class='o'>|</span><span class='n'>f</span><span class='o'>|</span> <span class='cp'>%&gt;</span><span class='x'/>
 </code></pre>
 </div>
 </p>
 
-<p>When you upload a picture it doesn&#8217;t look nice because it only shows a path to the file, so let&#8217;s fix
-  that.</p>
+<p>Al cargar una imagen que no se ve bien, ya que sólo muestra una ruta de acceso al archivo, así que vamos a arreglar eso.</p>
 
-<p>Open <code>app/views/ideas/show.html.erb</code> and change</p>
+<p>Abrir <code>app/views/ideas/show.html.erb</code> y cambiar</p>
 
 <p>
 
-<div class='highlight'><pre><code class='erb'><span class='cp'>&lt;%=</span>
-  <span class='vi'>@idea</span><span class='o'>.</span><span class='n'>picture</span>
-  <span class='cp'>%&gt;</span><span class='x'/>
+<div class='highlight'><pre><code class='erb'><span class='cp'>&lt;%=</span> <span class='vi'>@idea</span><span class='o'>.</span><span class='n'>picture</span> <span class='cp'>%&gt;</span><span class='x'/>
 </code></pre>
 </div>
 </p>
 
-<p>to</p>
+<p>a</p>
 
 <p>
 
-<div class='highlight'><pre><code class='erb'><span class='cp'>&lt;%=</span>
-  <span class='n'>image_tag</span><span class='p'>(</span><span class='vi'>@idea</span><span class='o'>.</span><span class='n'>picture_url</span><span class='p'>,</span>
-  <span class='ss'>:width</span> <span class='o'>=&gt;</span> <span class='mi'>600</span><span class='p'>)</span>
-  <span class='k'>if</span>
-  <span class='vi'>@idea</span><span class='o'>.</span><span class='n'>picture</span><span class='o'>.</span><span class='n'>present?</span>
-  <span class='cp'>%&gt;</span><span class='x'/>
+<div class='highlight'><pre><code class='erb'><span class='cp'>&lt;%=</span> <span class='n'>image_tag</span><span class='p'>(</span><span class='vi'>@idea</span><span class='o'>.</span><span class='n'>picture_url</span><span class='p'>,</span><span class='ss'>:width</span> <span class='o'>=&gt;</span> <span class='mi'>600</span><span class='p'>)</span><span class='k'>if</span><span class='vi'>@idea</span><span class='o'>.</span><span class='n'>picture</span><span class='o'>.</span><span class='n'>present?</span> <span class='cp'>%&gt;</span><span class='x'/>
 </code></pre>
 </div>
 </p>
 
 
-<h2 id='step_5_finetune_the_routes'>Step 5: Finetune the routes</h2>
+<h2 id='step_5_finetune_the_routes'>Paso 5: Rutas</h2>
 
-<p>If you try to open <a href='http://localhost:3000'>http://localhost:3000</a> it still shows the default page. Let&#8217;s
-  make it redirect to the ideas page.</p>
+<p>Si intenta abrir <a href='http://localhost:3000'>http://localhost:3000</a> aún muestra la página predeterminada. Vamos a hacer que redirigir a la página de ideas.</p>
 
-<p>On Mac OS X and Linux, in the terminal run:</p>
+<p>En Mac OS X y Linux, en la terminal:</p>
 
 <div class='highlight'><pre><code class='sh'>rm public/index.html
 </code></pre>
 </div>
-<p>On Windows, in the command prompt run:</p>
+<p>En Windows, a la línea de comandos:</p>
 
 <div class='highlight'><pre><code class='bat'><span class='k'>del</span> public\index.html
 </code></pre>
 </div>
-<p>Then open <code>config/routes.rb</code> and after the first line add</p>
+<p>A continuación, abra <code>config/routes.rb</code>  y añadir después de la primera línea</p>
 
-<div class='highlight'><pre><code class='ruby'><span class='n'>root</span> <span class='ss'>:to</span>
-  <span class='o'>=&gt;</span>
-  <span class='n'>redirect</span><span class='p'>(</span><span class='s1'>&#39;/ideas&#39;</span><span class='p'>)</span>
+<div class='highlight'><pre><code class='ruby'><span class='n'>root</span> <span class='ss'>:to</span><span class='o'>=&gt;</span><span class='n'>redirect</span><span class='p'>(</span><span class='s1'>&#39;/ideas&#39;</span><span class='p'>)</span>
 </code></pre>
 </div>
 
-<h2 id='what_next'>What next?</h2>
+<h2 id='what_next'>¿Y ahora qué?</h2>
 
 <ul>
-  <li>Add design using HTML &#38; CSS</li>
+  <li>Añadir diseño con HTML y CSS</li>
 
-  <li>Add ratings</li>
+  <li>Añadir notas</li>
 
-  <li>Use CoffeeScript (or JavaScript) to add interaction</li>
+  <li>Utilice CoffeeScript (o JavaScript) para la interacción</li>
 
-  <li>Add picture resizing to make loading the pictures faster</li>
+  <li>Añadir el cambio de tamaño de imagen para cargar las fotos más rápido</li>
 </ul>
 </div>
 </article>
+</br></br></br>
