--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,7 +2,7 @@
 
 
   <ul id="control">
-    <li class="a"><div>RoR<%= link_to " Guias", :controller=> :main , :action=> :sieapp %></div>
+    <li class="a"><div>RoR <%= link_to "Guias", :controller=> :main , :action=> :sieapp %></div>
 
       <%=  image_tag "Ruby_Programming_Icons_by_3nc.jpg", :size=>"560x480", :border=>"0" %>
 
@@ -12,7 +12,7 @@
       <%=  image_tag "jobs-banner-img.jpg", :size=>"560x480", :border=>"0" %>
     </li>
 
-    <li class="c">       <div>Lenguajes de programación <a href="http://www.cristalab.com/tutoriales/introduccion-a-codeigniter-c109252l/" target="_blank">php(codeigniter)</a></div>
+    <li class="c">       <div>Lenguajes de programación <%=  link_to "php(codeigniter)", :controller=>"main", :action=>"phpcodeigniter" %></div>
       <%=  image_tag "img_kv.gif", :size=>"560x480", :border=>"0" %>
     </li>
 
