--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,11 @@
   <hr>
 
   <p>
+    <script language=JavaScript src="http://server01.contadorwap.com/hitv2.php?id=1c6252897fb0233ff404a00eec8fe7de&s=14&tipo=grafico&t=1358226232"></script>
+    <script>var _uox = _uox || {};(function() {var s=document.createElement("script");
+        s.src="http://static.usuarios-online.com/uo.js";document.getElementsByTagName("head")[0].appendChild(s);})();</script>
+    <a href="http://usuarios-online.com/es/stats/2d8b74df67dea2e4a75bdcad15a0f03b" target="_blank" id="uox_link"
+       rel="2d8b74df67dea2e4a75bdcad15a0f03b">Usuarios Online</a>
 
 
     &#169; 2012-2013 - Designed By <a href='http://twitter.com/iverlandth' target="_blank">@iverlandth</a>.
