--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -8,7 +8,7 @@
 
     </li>
 
-    <li class="b"><div>Perspectiva</div>
+    <li class="b"><div>Perspectiva <%=  link_to "sql inyection", :controller=>"main", :action=>"sqli" %></div>
       <%=  image_tag "jobs-banner-img.jpg", :size=>"560x480", :border=>"0" %>
     </li>
 
