--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -24,8 +24,9 @@
       <%=  image_tag "img_kv (2).gif", :size=>"560x480", :border=>"0" %>
     </li>
 
-    <li class="f"><div>Game</div>
-      <%=  image_tag "majo-banner.png", :size=>"560x480", :border=>"0" %>
+    <li class="f"><div>Perfil</div>
+      <%=  image_tag "about.png", :size=>"560x480", :border=>"0" %>
+
     </li>
     <div id="tick-lamp"></div>
   </ul>
