--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-
 <%= yield %>
+
+
 
 </body>
 
@@ -24,7 +24,7 @@
     <li><a href="https://github.com/iverlandth" target="_blank">Git Hub</a></li>
     <li id="fb"><a href="https://www.facebook.com/kyoir" target="_blank">Facebook</a></li>
     <li id="tw"><a href="http://twitter.com/iverlandth" target="_blank">Twitter</a></li>
-    <li><%= mail_to "me@domain.com", "Contact", :encode => "hex" %></li>
+    <li><%= mail_to "iverherlandth@gmail.com", "Contact", :encode => "hex" %></li>
     <li><%= link_to "Blog" %></li>
     <div class="cont-l">
       <div id="lavalamp"></div>
