--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -12,7 +12,7 @@
       <%=  image_tag "jobs-banner-img.jpg", :size=>"560x480", :border=>"0" %>
     </li>
 
-    <li class="c">       <div>Lenguajes de programación <%=  link_to "php(codeigniter)", :controller=>"main", :action=>"phpcodeigniter" %></div>
+    <li class="c">       <div>Lenguajes de programación <%=  link_to "php(codeigniter)", :controller=>"main", :action=>"phpcodeigniter" %>  <%=  link_to "android(curso audio visual)", :controller=>"main", :action=>"and" %></div>
       <%=  image_tag "img_kv.gif", :size=>"560x480", :border=>"0" %>
     </li>
 
