--- a/app/views/main/sieapp.html.erb
+++ b/app/views/main/sieapp.html.erb
@@ -2,9 +2,9 @@
 <div class="span10">
 <h1 id='rails_girls_app_tutorial'>Rails Sie App Tutorial</h1>
 
-<p><em>Creado por Iver, <a href='https://twitter.com/iverlandth'>@iverlandth</a></em></p>
+
 <p><strong>Asegúrese de que ha instalado rails.</strong>
-  <a href='#'><strong>Siga la guía de instalación</strong></a> para ponerse en marcha..</p>
+  <a href='/main/iror'><strong>Siga la guía de instalación</strong></a> para ponerse en marcha..</p>
 
 <h2 id='step_0_get_to_know_the_tools'>Paso 0: Conocer las herramientas</h2>
 
