--- a/app/views/main/and.html.erb
+++ b/app/views/main/and.html.erb
@@ -1,8 +1,14 @@
+
+
+
 <article class="container">
   <div class="span10">
-    <h1 id='rails_and_app_tutorial'>[Curso AudioVisual Android] Programacion Dispositivos</h1>
+    <h1 id='rails_and_app_tutorial'> Programacion Dispositivos</h1> <b>
 
-<div class="inner" id="msg_93570"><br/><br/><img src="http://www.androidcurso.com/templates/jmint-tg/images/logo.png" alt="" class="bbc_img"/><br/><br/>1
+  </b>
+
+
+    <div class="inner" id="msg_93570"><br/><br/><img src="http://www.androidcurso.com/templates/jmint-tg/images/logo.png" alt="" class="bbc_img"/><br/><br/>1
   <strong><span class="bbc_u">Presentación Curso</span></strong><br/><br/>1
   <a href="http://polimedia.upv.es/visor/?id=d1480ed8-b757-5448-8bcb-4b42d2596c7d" class="bbc_link" target="_blank">
     Android Presentación&nbsp; </a> 11 min, 2 s<br/>2
