--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,7 +2,7 @@
 
 
   <ul id="control">
-    <li class="a"><div>Ruby on Rails (RoR) <%= link_to "Primera aplicación", :controller=> :main , :action=> :sieapp %> <%= link_to "instalación ", :controller=> :main , :action=> :iror %></div>
+    <li class="a"><div>Ruby on Rails (RoR) <%= link_to "instalación ", :controller=> :main , :action=> :iror %> <%= link_to "Primera aplicación", :controller=> :main , :action=> :sieapp %> </div>
 
       <%=  image_tag "Ruby_Programming_Icons_by_3nc.jpg", :size=>"560x480", :border=>"0" %>
 
@@ -24,13 +24,38 @@
       <%=  image_tag "img_kv (2).gif", :size=>"560x480", :border=>"0" %>
     </li>
 
-    <li class="f"><div>Perfil</div>
+    <li class="f"><div>Perfil </div>
       <%=  image_tag "about.png", :size=>"560x480", :border=>"0" %>
 
     </li>
     <div id="tick-lamp"></div>
   </ul>
 </div>
+<center>
+<div class="fb-like" data-href="https://iverlandth.herokuapp.com/" data-send="true" data-layout="button_count" data-width="450" data-show-faces="true" data-font="segoe ui" data-colorscheme="light"></div>
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="https://iverlandth.herokuapp.com/" data-via="iverlandth" data-lang="es" data-related="iverlandth" data-hashtags="ror">Twittear</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<!-- Place this tag where you want the +1 button to render. -->
+<div class="g-plusone" data-size="medium" data-annotation="inline" data-width="300" data-href="https://iverlandth.herokuapp.com/"></div>
+  </center>
+<!-- Place this tag after the last +1 button tag. -->
+<script type="text/javascript">
+    window.___gcfg = {lang: 'es-419'};
+
+    (function() {
+        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+        po.src = 'https://apis.google.com/js/plusone.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+    })();
+</script>
 <br>
   <center>
 <%= image_tag "top3rd_04_11.jpg" %></center><br><br><br><br><br><br><br><br>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/es_LA/all.js#xfbml=1";
+    fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
