--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -24,13 +24,25 @@
       <%=  image_tag "img_kv (2).gif", :size=>"560x480", :border=>"0" %>
     </li>
 
-    <li class="f"><div>Perfil </div>
+    <li class="f"><div>Perfil  <a href="https://twitter.com/iverlandth" class="twitter-follow-button" data-show-count="false" data-lang="es">Seguir a @iverlandth</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+      <div class="fb-follow" data-href="https://www.facebook.com/kyoir" data-layout="button_count" data-show-faces="true" data-width="350"></div>
+    </div>
       <%=  image_tag "about.png", :size=>"560x480", :border=>"0" %>
 
     </li>
     <div id="tick-lamp"></div>
   </ul>
 </div>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/es_LA/all.js#xfbml=1";
+    fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <center>
 <div class="fb-like" data-href="https://iverlandth.herokuapp.com/" data-send="true" data-layout="button_count" data-width="450" data-show-faces="true" data-font="segoe ui" data-colorscheme="light"></div>
 <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://iverlandth.herokuapp.com/" data-via="iverlandth" data-lang="es" data-related="iverlandth" data-hashtags="ror">Twittear</a>
@@ -59,3 +71,5 @@
     js.src = "//connect.facebook.net/es_LA/all.js#xfbml=1";
     fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+
+<br><br><br><br><br>
