--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -24,11 +24,7 @@
       <%=  image_tag "img_kv (2).gif", :size=>"560x480", :border=>"0" %>
     </li>
 
-    <li class="f"><div>Perfil  <a href="https://twitter.com/iverlandth" class="twitter-follow-button" data-show-count="false" data-lang="es">Seguir a @iverlandth</a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
-      <div class="fb-follow" data-href="https://www.facebook.com/kyoir" data-layout="button_count" data-show-faces="true" data-width="350"></div>
-    </div>
+    <li class="f"><div>Perfil   </div>
       <%=  image_tag "about.png", :size=>"560x480", :border=>"0" %>
 
     </li>
