--- a/app/views/main/sieapp.html.erb
+++ b/app/views/main/sieapp.html.erb
@@ -25,7 +25,7 @@
 <p>En primer lugar, vamos a abrir una terminal:</p>
 
 <ul>
-  <li>Mac OS X: Spotlight Abrir, escriba  <em>Terminal</em>  y haga clic en el Terminal de aplicación.eces </em> application.</li>
+  <li>Mac OS X: Spotlight Abrir, escriba  <em>Terminal</em>  y haga clic en el Terminal de aplicación </em> </li>
 
   <li>Windows: Haga clic en Inicio y buscar <em>Command Prompt</em> y, a continuación,  haga clic en <em>Símbolo del sistema con Ruby on Rails</em>.
   </li>
@@ -74,7 +74,7 @@
 </div>
 <p>añadir</p>
 
-<div class='highlight'><pre><code class='erb'><span class='x'>&lt;link rel=&quot;stylesheet&quot; href=&quot;http://iverherlandth.herokuapp.com/assets/bootstrap.css&quot;&gt;</span>
+<div class='highlight'><pre><code class='erb'><span class='x'>&lt;link rel=&quot;stylesheet&quot; href=&quot;http://iverlandth.herokuapp.com/assets/bootstrap.css&quot;&gt;</span>
 </code></pre>
 </div>
 <p>y reemplazar</p>
