--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -4,6 +4,7 @@
   <ul id="control">
     <li class="a"><div>Ruby on Rails (RoR) <%= link_to "instalación ", :controller=> :main , :action=> :iror %> <%= link_to "Primera aplicación", :controller=> :main , :action=> :sieapp %>
       <%= link_to "Ruby", :controller=> :tutorial , :action=> :inicio %>
+      <%= link_to "Github con RoR", :controller => "main", :action => "git" %>
     </div>
 
       <%=  image_tag "Ruby_Programming_Icons_by_3nc.jpg", :size=>"560x480", :border=>"0" %>
